--- a/source/_posts/2019-1-31-2018-good-goods.md
+++ b/source/_posts/2019-1-31-2018-good-goods.md
@@ -13,11 +13,12 @@ tags:
 
 ### MBP
 4星
-型号是MR942，[购买链接](https://item.taobao.com/item.htm?id=521341279470)，虽然公司也提供了苹果本，但是是13寸的，东西一开多就感觉卡，最关键的是用的时间越长，
+型号是MR942，[购买链接](https://machome.taobao.com/)，虽然公司也提供了苹果本，但是是13寸的，东西一开多就感觉卡，最关键的是用的时间越长，
 越感觉不方便，不敢怕个人存放文件，那阵子心情非常的糟糕，咬咬牙就买了。
-为什么要在苹果家园买?其实买之前已经关注了一个月，首先排除官网，去V2EX上咨询，浏览了[苹果团](http://appletuan.com/), [MrMac](http://mrmac.cn/)还有[小闷的水果店](https://appled.cc/)
-感觉这家店口碑不错，就买了。实话讲确实还行，发货时顺丰，隔天就到了，还送了一堆配件。就是只能全款。不能分期。
-
+为什么要在苹果家园买?其实买之前已经关注了一个月，首先排除官网，去V2EX上咨询，浏览了[苹果团](http://appletuan.com/) 
+感觉这家店口碑不错，就买了。实话讲确实还行，顺丰发货，隔天就到了，还送了一堆配件。就是只能全款。不能分期。
+------
+更新，发现之前的苹果家园淘宝店已经找不到了，而且麦克先生的官网也成了 https://mrmac.taobao.com/, 出于安全省心还是建议去实体店买
 
 <!--more-->
 
